# octoflow

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  octoflow.toml  pyproject.toml  requirements.txt  setup.py
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service.yaml
dags/: __init__.py
docs/: intro.adoc
src/octoflow/: config.py  utils.py
src/octoflow/cli/: __init__.py
src/octoflow/core/: interface.py  settings.py
src/octoflow/core/interfaces/: tenant.py
src/octoflow/core/project/: __init__.py  loader.py  tenant.py
src/octoflow/core/settings/: __init__.py  tenants.py
src/octoflow/models/: tenant.py
src/octoflow/server/: main.py  middleware.py
tests/: conftest.py  test_cli.py  test_interface.py  test_project.py  test_server.py  test_settings.py  test_tenants.py
tests/tenant/: setup.py
tests/tenant/src/octoflow/tenants/tenant/: pipeline.py  settings.py
tests/tenant/src/octoflow/tenants/tenant/dags/: pipeline.py
