[tool.poetry]
name = "octoflow"
version = "0.1.0"
description = ""
authors = ["teaglebuilt <dillan.teagle.va@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = { version ="^2.2.0", extras = ["postgres", "cncf.kubernetes", "celery", "sqlite", "docker"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
